[gd_scene load_steps=28 format=2]

[ext_resource path="res://Source/Images/MonitorFrame.png" type="Texture" id=1]
[ext_resource path="res://Source/Shaders/LensDistortion/LensDistortionShaderMaterial.tres" type="Material" id=2]
[ext_resource path="res://Source/Scripts/Rate.gd" type="Script" id=3]
[ext_resource path="res://Source/Shaders/VHS/VHSShaderMaterial.tres" type="Material" id=4]
[ext_resource path="res://Source/Fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Source/Images/circle.png" type="Texture" id=6]
[ext_resource path="res://Source/Images/BackgroundGridStatic.jpg" type="Texture" id=7]
[ext_resource path="res://Source/Shaders/TV/TVShaderMaterial.tres" type="Material" id=8]
[ext_resource path="res://Source/Themes/MenuTheme.tres" type="Theme" id=9]
[ext_resource path="res://Source/Sounds/MonitorBeep.wav" type="AudioStream" id=10]
[ext_resource path="res://Source/Sounds/HeartBeat.wav" type="AudioStream" id=11]
[ext_resource path="res://Source/Sounds/Static.wav" type="AudioStream" id=12]
[ext_resource path="res://Source/Shaders/Sharpness/SharpnessShaderMaterial.tres" type="Material" id=13]
[ext_resource path="res://Source/Images/SceneChangeStatic.jpg" type="Texture" id=14]
[ext_resource path="res://Source/Sounds/TV_Static.wav" type="AudioStream" id=15]
[ext_resource path="res://Source/Sounds/NoBeeps.wav" type="AudioStream" id=16]
[ext_resource path="res://Source/Shaders/VHSStop/VHSStopShaderMaterial.tres" type="Material" id=17]
[ext_resource path="res://Source/Scripts/Menu.gd" type="Script" id=18]
[ext_resource path="res://Source/Scenes/Trail.tscn" type="PackedScene" id=19]

[sub_resource type="Animation" id=4]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/StaticImage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/RateVerticalContainer/TVStatic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Texts:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animation:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Texts/ExitTexts:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Texts/MenuTexts:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Texts/OptionsTexts:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "change_to_exit"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/StaticImage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/RateVerticalContainer/TVStatic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Texts/OptionsTexts:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Texts/MenuTexts:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Texts/ExitTexts:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "change_to_game"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/StaticImage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/RateVerticalContainer/TVStatic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Texts:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animation:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "change_to_menu"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/StaticImage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/RateVerticalContainer/TVStatic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Texts/ExitTexts:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Texts/MenuTexts:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Texts/OptionsTexts:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "change_to_options"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/StaticImage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/RateVerticalContainer/TVStatic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Texts/ExitTexts:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Texts/MenuTexts:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Texts/OptionsTexts:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
script = ExtResource( 18 )
is_menu_active = true

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BackgroundImageGrid" type="TextureRect" parent="Background"]
modulate = Color( 1, 1, 1, 0.25098 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="BackgroundImageAjust" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.501961 )

[node name="Animation" type="Control" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="RateVerticalContainer" type="VBoxContainer" parent="Background/Animation"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
mouse_filter = 2
alignment = 1

[node name="Rate" type="Sprite" parent="Background/Animation/RateVerticalContainer"]
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 6 )
script = ExtResource( 3 )

[node name="Trail" parent="Background/Animation/RateVerticalContainer" instance=ExtResource( 19 )]
position = Vector2( 0, 20 )
width = 2.0
default_color = Color( 0, 1, 0, 1 )
target_path = NodePath("../Rate")
trail_length = 32

[node name="MonitorBeep" type="AudioStreamPlayer" parent="Background/Animation/RateVerticalContainer"]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="HeartBeat" type="AudioStreamPlayer" parent="Background/Animation/RateVerticalContainer"]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="Static" type="AudioStreamPlayer" parent="Background/Animation/RateVerticalContainer"]
stream = ExtResource( 12 )
volume_db = -28.0
pitch_scale = 1.05

[node name="NoBeeps" type="AudioStreamPlayer" parent="Background/Animation/RateVerticalContainer"]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="TVStatic" type="AudioStreamPlayer" parent="Background/Animation/RateVerticalContainer"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="StaticImage" type="TextureRect" parent="Background/Animation"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 256.0
margin_bottom = 120.0
texture = ExtResource( 14 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Animation"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/change_to_exit = SubResource( 6 )
anims/change_to_game = SubResource( 5 )
anims/change_to_menu = SubResource( 8 )
anims/change_to_options = SubResource( 7 )

[node name="Texts" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )

[node name="OptionsTexts" type="Control" parent="Texts"]
visible = false
anchor_top = 0.112
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.2

[node name="OptionsTitle" type="RichTextLabel" parent="Texts/OptionsTexts"]
anchor_right = 1.0
margin_top = 24.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Opções[/center]"
text = "Opções"

[node name="OptionsHorizontalContainer" type="HBoxContainer" parent="Texts/OptionsTexts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 81.0
alignment = 1

[node name="OptionsVerticalContainer" type="VBoxContainer" parent="Texts/OptionsTexts/OptionsHorizontalContainer"]
margin_left = 423.0
margin_right = 601.0
margin_bottom = 460.0

[node name="FullScreenCheckBoxHorizontalContaier" type="HBoxContainer" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer"]
margin_right = 178.0
margin_bottom = 39.0

[node name="FullScreenText" type="Button" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/FullScreenCheckBoxHorizontalContaier"]
margin_right = 143.0
margin_bottom = 39.0
text = "Tela Cheia"
flat = true

[node name="FullScreenCheckBox" type="CheckBox" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/FullScreenCheckBoxHorizontalContaier"]
margin_left = 147.0
margin_right = 171.0
margin_bottom = 39.0

[node name="BordelessCheckBoxHorizontalContainer" type="HBoxContainer" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer"]
margin_top = 43.0
margin_right = 178.0
margin_bottom = 82.0

[node name="BordelessText" type="Button" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/BordelessCheckBoxHorizontalContainer"]
margin_right = 150.0
margin_bottom = 39.0
text = "Sem Borda"
flat = true

[node name="BordelessCheckBox" type="CheckBox" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/BordelessCheckBoxHorizontalContainer"]
margin_left = 154.0
margin_right = 178.0
margin_bottom = 39.0

[node name="VolumeTextHorizontalContainer" type="HBoxContainer" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer"]
margin_top = 86.0
margin_right = 178.0
margin_bottom = 117.0

[node name="VolumeText" type="Label" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/VolumeTextHorizontalContainer"]
margin_right = 97.0
margin_bottom = 31.0
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer"]
margin_top = 121.0
margin_right = 178.0
margin_bottom = 137.0
min_value = -30.0
max_value = 0.0

[node name="BackButton" type="Button" parent="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer"]
margin_top = 141.0
margin_right = 178.0
margin_bottom = 178.0
text = "Voltar"
flat = true

[node name="MenuTexts" type="Control" parent="Texts"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameTitle" type="RichTextLabel" parent="Texts/MenuTexts"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -24.0
margin_right = 512.0
margin_bottom = 24.0
mouse_filter = 2
theme = ExtResource( 9 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Last Hope[/center]"
text = "Last Hope"

[node name="MenuHorizontalContainer" type="HBoxContainer" parent="Texts/MenuTexts"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -44.0
margin_bottom = 224.0
mouse_filter = 0
alignment = 1

[node name="MenuVerticalContainer" type="VBoxContainer" parent="Texts/MenuTexts/MenuHorizontalContainer"]
margin_left = 439.0
margin_right = 585.0
margin_bottom = 268.0
mouse_filter = 0
alignment = 1

[node name="StartButton" type="Button" parent="Texts/MenuTexts/MenuHorizontalContainer/MenuVerticalContainer"]
margin_top = 74.0
margin_right = 146.0
margin_bottom = 111.0
focus_mode = 0
enabled_focus_mode = 0
text = "Novo Jogo"
flat = true

[node name="OptionsButton" type="Button" parent="Texts/MenuTexts/MenuHorizontalContainer/MenuVerticalContainer"]
margin_top = 115.0
margin_right = 146.0
margin_bottom = 152.0
focus_mode = 0
text = "Opções"
flat = true

[node name="QuitButton" type="Button" parent="Texts/MenuTexts/MenuHorizontalContainer/MenuVerticalContainer"]
margin_top = 156.0
margin_right = 146.0
margin_bottom = 193.0
focus_mode = 0
text = "Sair"
flat = true

[node name="ExitTexts" type="Control" parent="Texts"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ExitTitle" type="RichTextLabel" parent="Texts/ExitTexts"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -64.0
margin_right = 512.0
margin_bottom = -16.0
mouse_filter = 2
theme = ExtResource( 9 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Sair ?[/center]"
text = "Sair ?"

[node name="ExitHorizontalContainer" type="HBoxContainer" parent="Texts/ExitTexts"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="ExitVerticalContainer" type="VBoxContainer" parent="Texts/ExitTexts/ExitHorizontalContainer"]
margin_left = 449.0
margin_right = 574.0
margin_bottom = 600.0
alignment = 1

[node name="ConfirmationButtonsContainer" type="HBoxContainer" parent="Texts/ExitTexts/ExitHorizontalContainer/ExitVerticalContainer"]
margin_top = 281.0
margin_right = 125.0
margin_bottom = 318.0

[node name="NoButton" type="Button" parent="Texts/ExitTexts/ExitHorizontalContainer/ExitVerticalContainer/ConfirmationButtonsContainer"]
margin_right = 62.0
margin_bottom = 37.0
text = "Não"
flat = true

[node name="YesButton" type="Button" parent="Texts/ExitTexts/ExitHorizontalContainer/ExitVerticalContainer/ConfirmationButtonsContainer"]
margin_left = 66.0
margin_right = 125.0
margin_bottom = 37.0
text = "Sim"
flat = true

[node name="Shaders" type="Control" parent="."]
anchor_left = 0.11
anchor_top = 0.12
anchor_right = 0.9
anchor_bottom = 0.87
margin_left = -22.448
margin_top = -20.0
margin_right = 12.4
margin_bottom = 17.8
mouse_filter = 2

[node name="LDShaderControl" type="Control" parent="Shaders"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LDShaderBuffer" type="BackBufferCopy" parent="Shaders/LDShaderControl"]
copy_mode = 2

[node name="LDShaderRect" type="ColorRect" parent="Shaders/LDShaderControl"]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SharpnessShaderControl" type="Control" parent="Shaders"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SharpnessShaderBuffer" type="BackBufferCopy" parent="Shaders/SharpnessShaderControl"]
copy_mode = 2

[node name="SharpnessShaderRect" type="ColorRect" parent="Shaders/SharpnessShaderControl"]
material = ExtResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VHSShaderControl" type="Control" parent="Shaders"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VHSShaderBuffer" type="BackBufferCopy" parent="Shaders/VHSShaderControl"]
copy_mode = 2

[node name="VHSShaderRect" type="ColorRect" parent="Shaders/VHSShaderControl"]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TVShaderControl" type="Control" parent="Shaders"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TVShaderBuffer" type="BackBufferCopy" parent="Shaders/TVShaderControl"]
copy_mode = 2

[node name="TVShaderRect" type="ColorRect" parent="Shaders/TVShaderControl"]
material = ExtResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VHSStopShaderControl" type="Control" parent="Shaders"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.192017
margin_bottom = 2.20001
mouse_filter = 2

[node name="VHSStopShaderBuffer" type="BackBufferCopy" parent="Shaders/VHSStopShaderControl"]
copy_mode = 2

[node name="VHStopShaderRect" type="ColorRect" parent="Shaders/VHSStopShaderControl"]
material = ExtResource( 17 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BackgroundTVFrame" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="SuperSecretControl" type="Control" parent="."]
anchor_left = 0.838
anchor_top = 0.941
anchor_right = 0.891
anchor_bottom = 0.986
margin_left = -0.112061
margin_top = -1.60004
margin_right = -0.384033
margin_bottom = 2.39996
mouse_filter = 2

[node name="SuperSecretButton" type="Button" parent="SuperSecretControl"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[connection signal="pressed" from="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/FullScreenCheckBoxHorizontalContaier/FullScreenText" to="." method="_on_FullScreenText_pressed"]
[connection signal="pressed" from="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/FullScreenCheckBoxHorizontalContaier/FullScreenCheckBox" to="." method="_on_FullScreenCheckBox_pressed"]
[connection signal="pressed" from="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/BordelessCheckBoxHorizontalContainer/BordelessText" to="." method="_on_BordelessText_pressed"]
[connection signal="pressed" from="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/BordelessCheckBoxHorizontalContainer/BordelessCheckBox" to="." method="_on_BordelessCheckBox_pressed"]
[connection signal="value_changed" from="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="Texts/OptionsTexts/OptionsHorizontalContainer/OptionsVerticalContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Texts/MenuTexts/MenuHorizontalContainer/MenuVerticalContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Texts/MenuTexts/MenuHorizontalContainer/MenuVerticalContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Texts/MenuTexts/MenuHorizontalContainer/MenuVerticalContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Texts/ExitTexts/ExitHorizontalContainer/ExitVerticalContainer/ConfirmationButtonsContainer/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="pressed" from="Texts/ExitTexts/ExitHorizontalContainer/ExitVerticalContainer/ConfirmationButtonsContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="SuperSecretControl/SuperSecretButton" to="." method="_on_SuperSecretButton_pressed"]
